# ebsynth

./: .gitignore  CMakeLists.txt  build-linux-cpu+cuda.sh  build-linux-cpu_only.sh  build-macos-cpu_only.sh  build-wasm.sh  build-win32-cpu+cuda.bat  build-win32-cpu_only.bat  build-win64-cpu+cuda.bat  build-win64-cpu_only.bat
cmake/: FindOpenMP.cmake
include/: ebsynth.h
src/: ebsynth.cpp  ebsynth_cpu.cpp  main.cpp
wasm/: CMakeLists.txt  embind.cpp
